# church-class-list

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
church_class_list/: run.py
