[tool.black]
line-length = 88

[tool.poetry]
name = "church-class-list"
description = ""
version = "0.0.0"
authors = ["Trevor Lauder <trevor@lauderfamily.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
requests = "^2.26"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0"
isort = "^5.10"
